# CS-GY-9223-Open-Source

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
components/chat_client_api/: README.md  pyproject.toml
components/chat_client_api/src/chat_client_api/: __init__.py  client.py
components/chat_client_api/tests/: test_chat_client_api.py
components/slack_client_impl/: README.md  pyproject.toml
components/slack_client_impl/src/slack_client_impl/: __init__.py  client.py
components/slack_client_impl/tests/: test_slack_client.py
docs/: architecture.md  design.md  index.md
docs/components/: chat_client_api.md  slack_client_impl.md
tests/e2e/: test_slack_e2e.py
tests/integration/: test_dependency_injection.py
